tests/NormalTests/paczka1/fuzzy1/23607086.err
Error in line 14: DNfjRI A812 97,6
Error in line 21: sfZJDXL A812 48,08
Error in line 19: HmE4 S748 24,3
Error in line 26: sfZJDXL A812 131,3
Error in line 31: HmE4 S748 -6,1
Error in line 18: miFlIkIRk S748 59,6
Error in line 30: HmE4 S748 97,6
Error in line 28: sfZJDXL S4 45,6
